# orangecheckr

./: .editorconfig  .gitignore  .npmrc  README.md  docker-compose.staging.yml  docker-compose.yml  package.json  pnpm-lock.yaml
dashboard/: index.html  styles.css
llm/: .env.template  main.py  pyproject.toml
llm/bot/: chain.py  prompt.py  routes.py
nostr-client/: index.mjs  package-lock.json  package.json  pnpm-lock.yaml
orange-proxy/: .env-example  Bot.js  bot.js  config.js  index.js  lnbits.js  package-lock.json  package.json  queue.js  reports.js  sample-posting-policy.md
orange-proxy/helpers/: banUser.js
orange-proxy/workers/: invoices_processing.js  spam_reporting.js
proxy/: .dockerignore  .env-example  .prettierrc  Dockerfile  config.js  index.js  index.ts  llm.js  llm.ts  package.json  pnpm-lock.yaml  queue.js  queue.ts  reports.js  tsconfig.json
proxy/helpers/: banUserInRelay.js  index.ts
proxy/src/: bot.ts  config.ts  global.d.ts  index.ts  llm.ts  lnbits.ts  queue.ts  reports.ts  server.ts  shutdown.ts  ws.ts
proxy/src/helpers/: banUserInRelay.ts  date.ts
proxy/src/workers/: invoices_processing.ts  spam_reporting.ts
proxy/workers/: invoices_processing.ts  spam_reporting.ts
