[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ibis Prevedello <ibiscp@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9,<3.11"
uvicorn = "^0.22.0"
fastapi = "^0.95.1"
langchain = "^0.0.325"
openai = "^0.28.1"
faiss-cpu = "^1.7.4"
tiktoken = "^0.5.1"
slack-sdk = "^3.23.0"
flask = "^3.0.0"
slack-bolt = "^1.18.0"
pylnbits = "^0.0.7"
lnurl = "^0.4.1"
qrcode = "^7.4.2"
pynostr = "^0.6.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
mypy = "^1.1.1"
ruff = "^0.0.254"
moviepy = "^1.0.3"
pillow = "9.5.0"

[tool.ruff]
ignore-init-module-imports = true
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
